plugins {
    id 'java-library'
}

repositories {
    mavenCentral()
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

dependencies {
    api project(':api')
    implementation 'com.google.code.findbugs:jsr305:3.0.2'

    annotationProcessor 'com.google.auto.service:auto-service:1.1.1'
    compileOnly 'com.google.auto.service:auto-service:1.1.1'

    implementation 'com.electronwill.night-config:core:3.6.7'
    runtimeOnly 'com.electronwill.night-config:toml:3.6.7'
}
